--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,11 @@ body {
     background-position-x: 90px;
     background-position-y: 100px;
 }
+
+#revealed {
+    position: absolute;
+    width: -webkit-fill-available;
+    background-color: yellow;
+    height: -webkit-fill-available;
+    text-align: center;
+}
