--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ body {
     }
 }
 
+.btn:disabled {
+    opacity: 50%;
+}
+
 
 /* 
 #stage {
@@ -137,4 +141,15 @@ body {
     background-color: yellow;
     height: -webkit-fill-available;
     text-align: center;
+}
+
+.cardRevealOverlay {
+    background-color: white;
+    display: none;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
 }
